[gd_scene load_steps=7 format=3 uid="uid://uebyoy3nrbnk"]

[ext_resource type="Script" path="res://BugAI.gd" id="1_546et"]
[ext_resource type="Texture2D" uid="uid://c3lvb71mc6wea" path="res://B.jpg" id="2_3gren"]
[ext_resource type="Texture2D" uid="uid://i286oe082tgw" path="res://squareCrosshair-export.png" id="2_ebpx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxryx"]
size = Vector2(47, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfq25"]
size = Vector2(49, 68)

[sub_resource type="CircleShape2D" id="CircleShape2D_oypc1"]
radius = 117.344

[node name="Bug" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_546et")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
z_index = 1
scale = Vector2(0.88, 1.12)
texture = ExtResource("2_ebpx0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -1)
shape = SubResource("RectangleShape2D_jxryx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -1)
scale = Vector2(0.175406, 0.175406)
texture = ExtResource("2_3gren")

[node name="Area2D" type="Area2D" parent="."]
visibility_layer = 3
position = Vector2(1, 2)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_mfq25")

[node name="radar" type="Area2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(0.61, 0.61)
collision_layer = 32

[node name="radarCollider" type="CollisionShape2D" parent="radar"]
scale = Vector2(6.39, 6.39)
shape = SubResource("CircleShape2D_oypc1")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="body_entered" from="radar" to="." method="_on_radar_body_entered"]
[connection signal="body_exited" from="radar" to="." method="_on_radar_body_exited"]
